fix parameter extraction and validation